# lars

./: .gitignore  CMakeLists.txt  run.txt
.archive/NameGen/: NameGen  NameGen.c  possibleNames.txt
.archive/OldTests/dual_mic_test/: CMakeLists.txt  dual-mic-test.c  wav_writer.h
.archive/OldTests/mic_test/: compile.sh  mic_test.c  test
.archive/OldTests/onnxrt_c_speech_detection_test/: compile.sh  onnxrt_c_speech_detection_test.c  test
.archive/OldTests/onnxrt_vad_gpu_test/: CMakeLists.txt  compile.sh  onnxrt_vad_gpu_test.c
.archive/OldTests/python_embed_test/: CMakeLists.txt  main.c  pythonTest.py
.archive/v1-architecture/: computeMain.py  raspberryMain.py
.archive/v1-architecture/OldPythonCode/: transcribe.py
.archive/v1-architecture/OldPythonCode/python_utils/: ML_utils.py
.archive/v1-architecture/OldPythonCode/python_utils/faster_whisper/: __init__.py  transcribe.py
.archive/v1-architecture/cpp_dev/: VADmodel.h  micModule.cpp
.archive/v1-architecture/supplementary/: WhisperCorpus.json  bitfield.txt  processedWhisperCorpus.txt  word2vecTraining.py
.archive/v1-architecture/utils/: LARS_utils.py  ML_utils.py
.archive/v1-architecture/utils/faster_whisper/: __init__.py  transcribe.py  vad.py
configs/: keywords.txt
include/: audio_and_transcription.h  fft.h  main.h  mic_access.h  queue.h  wav_writer.h
src/: CMakeLists.txt  audio_and_transcription.c  config_parser.c  fft.c  main.c  mic_access.c  queue.c  transcribe.py  wav_writer.c
src/cbuild/: CMakeCache.txt
v1-architecture/OldPythonCode/: transcripter.pyx
v1-architecture/OldPythonCode/python_utils/faster_whisper/: vad.py
